src/tests/fixtures/subscriptions/NonSubscriptionClassWithAsyncIterable.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class User {
  /** @gqlField */
  async *greetings(): AsyncIterable<string> {
    yield "Hello";
    yield "World";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/subscriptions/NonSubscriptionClassWithAsyncIterable.invalid.ts:4:23 - error: Unexpected AsyncIterable. Only fields on `Subscription` should return an `AsyncIterable`. Non-subscription fields are only expected to return a single value.

4   async *greetings(): AsyncIterable<string> {
                        ~~~~~~~~~~~~~~~~~~~~~
